# streamlit-ds-courses

./: .gitignore  Dockerfile  Introduction.py  Makefile  README.md  app_settings.py  preprocessing.py  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
crawlers/: alison.py  coursera.py  coursera_headers.py  edx.py  futurelearn.py  pluralsight.py  scrapy.cfg  settings.py  skillshare.py  skillshare_header.py  udemy.py
crawlers/ds_courses_crawlers/: middlewares.py  pipelines.py  settings.py
crawlers/ds_courses_crawlers/spiders/: futurelearn.py  skillshare.py  udemy.py
crawlers/ds_courses_crawlers_standalone/: alison.py  coursera.py  edx.py
crawlers/scrapy/: items.py  pipelines.py  settings.py
crawlers/scrapy/spiders/: futurelearn.py  skillshare.py  udemy.py
crawlers/standalone/: alison.py  common.py  coursera.py  edx.py  pluralsight.py  skillshare.py
dashboard/: Procfile  dashboard.py  preprocessing.py  requirements.txt  static.py
notebooks/: eda.ipynb
pages/: 2_Platform_for_specific_rating.py  3_What_depends_on_course_rating.py  4_Conclusions.py
pipeline/: __init__.py  common.py  coursera.py  run.py
pipeline/entity/: alison.py  coursera.py  edx.py  futurelearn.py  pluralsight.py  skillshare.py  stepik.py  udemy.py
pipelines/working/: pipeline-data-science-courses-cleaning.ipynb
test/: __init__.py  util_test.py
util/: __init__.py  text.py
