[tool.poetry]
name = "streamlit-ds-courses"
version = "1.0.0"
description = "An interactive Streamlit dashboard that gives insights on data science courses"
authors = ["Anton Kozyriev"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.22.0"
scikit-learn = "^1.2.2"
plotly = "^5.14.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pytest = "^7.3.1"

[tool.poetry.group.pipeline]
optional = true

[tool.poetry.group.pipeline.dependencies]
pyspark = "^3.4.0"
numpy = "^1.24.3"

[tool.poetry.group.webcrawl]
optional = true

[tool.poetry.group.webcrawl.dependencies]
scrapy = "^2.9.0"
selenium = "^4.10.0"
pandas = "^2.0.3"
scrapy-splash = "^0.9.0"

[tool.ruff]
select = ["A", "B", "C4", "E", "EM", "F", "I", "Q", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

